Fixed notification flex-stretch glitch

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	white-space: nowrap;
 	overflow: hidden;
 	font-size: var(--bodyFont);
 	backdrop-filter: blur(25px);
@@ -180,16 +181,20 @@ body {
 #sidebar {
 	width: 300px;
 	position: absolute;
-	right: 0;
+	right: -300px;
 	top: var(--standardHeight);
 	margin-top: 1px;
 	box-shadow: var(--boxShadow);
 	transition: right 0.25s;
 }
 
+#sidebar.open {
+	right: 0;
+}
+
 #sidebar > * {
 	margin-bottom: 1px;
-	backdrop-filter: blur(25px);
+	/* backdrop-filter: blur(25px); */
 }
 
 #sidebar_header {
@@ -203,6 +208,7 @@ body {
 
 #sidebar_header > * {
 	background-color: var(--backgroundTransparent);
+	backdrop-filter: blur(25px);
 	height: 100%;
 }
 
@@ -238,6 +244,7 @@ body {
 #sidebar_iconContainer {
 	height: 300px;
 	position: relative;
+	backdrop-filter: blur(25px);
 	/* background: var(--accent); */
 }
 
@@ -317,6 +324,7 @@ body {
 	margin: 0;
 	text-shadow: 0 0 1px var(--alert);
 	background: var(--backgroundTransparent);
+	backdrop-filter: blur(25px);
 }
 
 #sidebar_title.sidebar_titleCritical {
@@ -346,6 +354,7 @@ body {
 	font-size: var(--bodyFont);
 	text-shadow: 0 0 5px var(--accent);
 	background: var(--backgroundTransparent);
+	backdrop-filter: blur(25px);
 	margin: 0 !important;
 	color: var(--text);
 	/* border-left: solid 1px; */
@@ -361,6 +370,7 @@ body {
 	padding: 0 20px;
 	box-shadow: 0 1px var(--accent) inset;
 	background: var(--buttonTransparent);
+	backdrop-filter: blur(25px);
 	margin: 0;
 	/* border-style: solid; */
 	/* border-color: var(--accent); */
@@ -558,12 +568,19 @@ body {
 #notificationPane {
 	position: absolute;
 	left: 0;
-	top: 50%;
-	transform: translateY(-50%);
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	justify-content: center;
+	align-items: flex-start;
 }
 
 .notification {
+	position: relative;
 	height: 100px;
+	left: -80px;
+	opacity: 0;
+	margin-bottom: var(--standardMargin);
 	/* border-color: var(--accent); */
 	/* border-style: solid; */
 	/* border-width: 1px 0; */
@@ -572,6 +589,12 @@ body {
 	/* outline-width: var(--standardMargin); */
 	display: flex;
 	box-shadow: var(--boxShadow);
+	transition: width 0.5s, opacity 0.5s, left 0.5s;
+}
+
+.notification.open {
+	left: 0;
+	opacity: 1;
 }
 
 .notification_advisor {
